Fixed dark mode toggle

--- a/form.css
+++ b/form.css
@@ -36,7 +36,6 @@ body {
    display: flex;
    align-items: center;
    justify-content: center;
-    border: solid;
     width: 50%;
     margin: 0;
 }
@@ -45,7 +44,6 @@ form {
     display: grid;
     gap: 40px;
     text-align: center;
-
     place-items: center;
     width: 80%;
     height: 40%;
@@ -62,17 +60,19 @@ button {
     color: white;
     border-radius: 8px;
     cursor: pointer;
-    transition: 0.5s;
+    transition: 0.3s;
     width: 60%;
-    position: relative;
+}
+
+button:hover {
+    border: solid;
+    background-color: transparent;
+    color: black;
 }
 
 
 
 @media (max-width: 580px) {
-    .sign-in_image {
-        width: 100%;
-    }
     .sign-in {
        width: 20rem;
        height: 20rem;
@@ -101,8 +101,13 @@ button {
     }
 }
 
-.dark_form {
-    background-color: var(--grey);
+.dark_button {
+    background-color: white;
+    color: black;
+}
+
+.dark_button:hover {
+    background-color: transparent;
     color: white;
 }
 
